# delta-gui

./: .gitignore  CMakeLists.txt  DeltaKinematics.cpp  OctoKinematics.cpp  OctoKinematics.h  README.md  config  config.conf  main.cpp  stepper.h
models/delta/: delta.mtl
models/platform/: platform.mtl
models/rod/: rod.mtl
resources/models/base/: base.mtl
resources/models/effector/: effector.mtl
resources/shaders/glsl100/: sobel_colors.fs
resources/shaders/glsl330/: sobel.fs  sobel_colors.fs
tests/: CMakeLists.txt  OctoKinematics.cpp  OctoKinematics.h  main.cpp  new_kinematics.cpp  pos_algo.cpp  pos_test-top.pos  test-15x15-top.pos  test-top.pos  usb-top.pos
